--- a/src/estilos/insert.css
+++ b/src/estilos/insert.css
@@ -1,3 +1,14 @@
+.container-insert-inside{
+    background: #bfb8fa;
+    position: relative;
+    width: 100%;
+    -webkit-box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.23);
+    -moz-box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.23);
+    box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.23);
+    padding: 1rem 2rem;
+    margin: 1rem 0;
+}
+
 .container-form > div{
     display: grid;
     grid-template:
@@ -65,6 +76,19 @@
 
 select, input{
     height: 2rem;
+}
+
+.container-menu{
+    position: absolute;
+    right: 0;
+    font-size: 20px;
+    font-weight: 500;
+    margin: 1rem 3rem;
+    cursor: pointer;
+}
+
+.container-menu:hover{
+    color: antiquewhite;
 }
 
 @media screen and (max-width: 660px) {
